# namedisl

./: .gitignore  .gitlab-ci.yml  CITATION.cff  LICENSE.txt  README.rst  pyproject.toml  requirements.txt  upload-docs.sh
.basedpyright/: baseline.json
.github/workflows/: ci.yml  release.yml
doc/: Makefile  conf.py  index.rst  internals.rst  misc.rst  overview.rst  ref.rst  ref_core.rst  ref_expr.rst  ref_set.rst
namedisl/: __init__.py  core.py  expression_like.py  set_like.py  tags.py
namedisl/test/: test_expression_like.py  test_map.py  test_namedisl.py  test_operations.py  test_set.py  test_set_like.py  utils_for_tests.py
